plugins {
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
}

group = 'com.example.serbUber'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
archivesBaseName = 'springboot-mongo-docker'
apply plugin: "java"
apply plugin: "application"
apply plugin: "org.springframework.boot"

compileJava {
	sourceCompatibility = 17
	targetCompatibility = 17
	mainClassName       = "com.example.serbUber.SerbUberApplication"
}

jar {
	baseName = "springboot-mongo-docker"
	group    = "com.example.serbUber"
	version  = "0.0.1-SNAPSHOT"
	manifest { attributes "Main-Class": "com.example.serbUber.SerbUberApplication" }
}


repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.5'
	implementation 'org.springframework.security:spring-security-oauth2-jose:5.7.3'
	implementation 'org.hibernate.validator:hibernate-validator:6.0.10.Final'
	implementation 'com.google.api-client:google-api-client:2.0.1'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.12.1'
	implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
	implementation 'org.springframework.social:spring-social-facebook:2.0.3.RELEASE'
	implementation 'com.auth0:java-jwt:4.2.1'
	implementation 'com.paypal.sdk:rest-api-sdk:1.14.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.graphhopper:graphhopper-core:6.2'
	implementation 'com.github.myzhan:locust4j:1.0.0'
	implementation 'com.jayway.restassured:rest-assured:2.9.0'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'com.google.maps:google-maps-services:2.1.2'
	implementation 'com.squareup.okhttp3:okhttp:4.9.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.platform:junit-platform-suite-engine:1.9.1'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
	testImplementation 'org.mockito:mockito-core:4.8.0'
	testImplementation group: 'com.h2database', name: 'h2', version: '1.3.148'
	implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
	implementation 'org.assertj:assertj-core:3.8.0'
	implementation 'commons-io:commons-io:2.6'
	implementation 'com.github.tomakehurst:wiremock-jre8:2.27.2'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
	testImplementation 'org.springframework.security:spring-security-test:4.2.3.RELEASE'
}

tasks.named('test') {
	useJUnitPlatform()
}
